--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -20,6 +20,7 @@ body {
   justify-content: space-between;
   align-items: center;
   background-color: rgba(255, 255, 255, 0.1);
+  padding: 0.5em 0.75em;
 }
 
 #pikapedia-logo {
