--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -10,6 +10,18 @@ body {
   color: white;
 }
 
+article {
+  border: 1px solid blue;
+  width: 100%;
+  height: 100vh;
+}
+
+.pokemon-main {
+  border: 1px solid red;
+  height: 100vh;
+  width: 80%;
+}
+
 #contents-area {
   background-color: rgb(172, 215, 215);
   height: 100vh;
@@ -21,6 +33,7 @@ body {
   align-items: center;
   background-color: rgba(255, 255, 255, 0.1);
   padding: 0.5em 0.75em;
+  font-size: 1em;
 }
 
 #pikapedia-logo {
@@ -28,18 +41,30 @@ body {
   height: 3em;
 }
 
+.menu-area {
+  display: flex;
+}
+
+.header-icons {
+  display: flex;
+}
+
+.header-icons li {
+  padding: 0.5em 0.75em;
+}
+
 .header-icons img {
   width: 1em;
 }
 
-article {
-  border: 1px solid blue;
-  width: 100%;
-  height: 100vh;
+.drop-menu {
+  display: flex;
 }
 
-.pokemon-main {
-  border: 1px solid red;
-  height: 100vh;
-  width: 80%;
+.drop-menu li {
+  padding: 0.5em 0.75em;
+}
+
+.drop-menu li a {
+  color: white;
 }
