--- a/src/main/webapp/css/pokemonMain.css
+++ b/src/main/webapp/css/pokemonMain.css
@@ -1,1 +1,119 @@
 @charset "UTF-8";
+
+/* to center main contents */
+#main-page-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+/* for responsive design */
+.type-icons-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.type-icons button {
+  background-color: transparent;
+  border: none;
+  margin: 2vh 2vw;
+}
+
+.type-icons button img {
+  width: 5vw;
+  height: 5vw;
+  cursor: pointer;
+}
+
+.type-icons button:active {
+  transform: translateY(0.1vw);
+}
+
+/* search bar design */
+
+.search-bar-area {
+  display: flex;
+  align-items: center;
+  width: 50vw;
+  position: relative;
+  margin-top: 7vh;
+}
+
+#search-input {
+  width: 50vw;
+  height: 5.4vh;
+  border: 0.2vw solid #ffffff;
+  filter: drop-shadow(0vw 0.4vw 0.4vw rgba(0, 0, 0, 0.25));
+  border-radius: 1.5vw;
+  background-color: transparent;
+  padding-left: 2vw;
+}
+
+#search-input::placeholder {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1vw;
+  color: rgba(255, 255, 255, 0.5);
+}
+
+#magnifier-icon {
+  position: absolute;
+  width: 2vw;
+  right: 1.5vw;
+}
+
+/* pokemon cards gallery */
+
+.pokemon-card {
+  box-sizing: border-box;
+  overflow: hidden;
+  position: relative;
+  margin-top: 7.5vh;
+  width: 16vw;
+  height: 21vw;
+  background: rgba(255, 255, 255, 0.6);
+  border: 0.3vw solid #e56c3e;
+  border-radius: 15px;
+
+  /* text css */
+  font-style: normal;
+  font-weight: 800;
+  font-size: 1.2vw;
+  text-align: center;
+  color: rgba(46, 46, 46, 0.8);
+}
+
+.card-white-bg {
+  position: absolute;
+  width: 100%;
+  height: 60%;
+  background-color: rgba(255, 255, 255, 0.7);
+  border-radius: 0 0 15px 15px;
+  bottom: 0;
+}
+
+.card-contents {
+  position: absolute;
+  bottom: 5%;
+  left: 25%;
+  right: 25%;
+}
+
+.card-contents p {
+  margin-top: 1vh 0;
+}
+
+.card-pokemon-img {
+  width: 6.3vw;
+  margin-bottom: 2vh;
+}
+
+.card-type-icon {
+  width: 2.5vw;
+}
+
+.horizontal-line {
+  width: 3vw;
+  border: 2px solid rgba(0, 0, 0, 0.5);
+}
