--- a/src/main/webapp/css/myRewards.css
+++ b/src/main/webapp/css/myRewards.css
@@ -1,12 +1,29 @@
 @charset "UTF-8";
 
-#container {
-	height: 693px;
-	width: 1189px;
-	left: 366px;
-	top: 180px;
-	border-radius: 100px;
-	background: linear-gradient(0deg, #c54431, #c54431),
-		linear-gradient(0deg, rgba(255, 0, 0, 0), rgba(255, 0, 0, 0));
-	border: 10px solid #ff0000;
+#r-pokemons{
+/* Frame 136 */
+
+box-sizing: border-box;
+
+/* Auto layout */
+
+display: flex;
+flex-direction: row;
+align-items: flex-start;
+padding: 11px 5px;
+gap: 10px;
+
+width: 110px;
+height: 150px;
+
+background: #FFFFFF;
+border: 1px solid #787878;
+border-radius: 20px;
+
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+flex-grow: 0;
+	
 }
