--- a/src/main/webapp/css/quiz.css
+++ b/src/main/webapp/css/quiz.css
@@ -6,24 +6,29 @@
   font-style: normal;
 }
 .quiz-Container {
-  height: 540.3645629882812px;
-  width: 1094.13818359375px;
-  left: 424px;
+  height: 71vh;
+  width: 74.7vw;
   top: 290.9999694824219px;
   border-radius: 50px;
-  /* border: 3px solid black; */
+  border: 3px solid black; 
+  display: flex;
+}
+.quiz-LeftBlank{
+  height: 71vh;
+  width: 20vw;
+}
+.quiz-RightBlank{
+  height: 71vh;
+  width: 20vw;
 }
 .quiz-Center {
-  height: 538.6261596679688px;
-  width: 740px;
-  margin-left: 175px;
-  left: 601px;
-  top: 291px;
+  height: 71vh;
+  width: 48vw;
   /* border: 1px solid red; */
 }
 .center-Up {
-  width: 730px;
-  height: 350px;
+  height: 46vh;
+  width: 47vw;
   /* border: 3px solid rgb(120, 120, 38); */
   display: flex;
   border: 2px solid black;
@@ -31,15 +36,15 @@
 }
 
 .cetner-Down {
-  width: 740px;
-  height: 178px;
+  height: 23vh;
+  width: 48vw;
   /* border: 3px solid rgb(120, 120, 38); */
   display: flex;
 }
 
 .blank-Space {
-  height: 180px;
-  width: 340px;
+  height: 23.6vh;
+  width: 22vw;
   border: 2px solid black;
   border-right: none;
   display: flex;
@@ -48,8 +53,8 @@
   border-radius: 5%;
 }
 .blank-SpaceIn {
-  height: 160px;
-  width: 320px;
+  height: 21vh;
+  width: 21vw;
   border-top: 5px solid black;
   border-left: 4px solid black;
   border-bottom: 4px solid black;
@@ -57,8 +62,8 @@
 }
 
 .btn-Four {
-  height: 180px;
-  width: 390px;
+  height: 23.6vh;
+  width: 25vw;
   border-top: 2px solid black;
   border-left: 2px solid black;
   border-bottom: 2px solid black;
@@ -68,9 +73,18 @@
   align-items: center;
   border-radius: 5%;
 }
+button {
+  font-family: "DungGeunMo";
+  font-size: 2.5em;
+  border: none;
+  background-color: transparent;
+}
+button:hover {
+	font-size:2.8em;
+}
 .btn-Four-In {
-  height: 160px;
-  width: 370px;
+  height: 21vh;
+  width: 24vw;
   border-top: 5px solid black;
   border-left: 4px solid black;
   border-bottom: 4px solid black;
@@ -79,68 +93,81 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  font-size: 23pt;
-  font-family: "DungGeunMo";
   border-radius: 5%;
+  align-items: center;
 }
 .fightPokemon {
-  height: 160px;
-  width: 185px;
+  height: 21vh;
+  width: 12vw;
   /* border: 3px solid black; */
+
 }
 
 .itemQuit {
-  height: 160px;
-  width: 185px;
+  height: 21vh;
+  width: 12vw;
   /* border: 3px solid red; */
 }
 .fight-Btn {
-  height: 80px;
-  width: 185px;
+  height: 10.5vh;
+  width: 12vw;
   /* border: 3px solid skyblue; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
 }
 .poke-Btn {
-  height: 80px;
-  width: 185px;
+  height: 10.5vh;
+  width: 12vw;
   /* border: 3px solid skyblue; */
+    display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .items-Btn {
-  height: 80px;
-  width: 185px;
+  height: 10.5vh;
+  width: 12vw;
   /* border: 3px solid skyblue; */
+    display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .quit-Btn {
-  height: 80px;
-  width: 185px;
+  height: 10.5vh;
+  width: 12vw;
   /* border: 3px solid skyblue; */
+    display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .myPoke {
-  height: 350px;
-  width: 370px;
+  height: 46.5px;
+  width: 24vw;
   /* border: 4px solid purple; */
 }
 .myPoke-Up {
-  height: 175px;
-  width: 450px;
-  /* border: 3px solid black; */
+  height: 46.5vh;
+  width: 22vw;
+   border: 3px solid skyblue;
 }
 .myPoke-Down {
-  height: 175px;
-  width: 330px;
+  height: 23vh;
+  width: 21.5vw;
   /* border: 3px solid black; */
 }
 .enemyPoke {
-  height: 350px;
-  width: 370px;
-  /* border: 3px solid rgb(70, 28, 234); */
+  height: 46.5vh;
+  width: 27vw;
+  border: 3px solid red; 
 }
 .enemyPoke-Up {
-  height: 175px;
-  width: 360px;
-  /* border: 3px solid black; */
+  height: 35vh;
+  width: 24.5vw;
+   border: 3px solid pink;
 }
 .enemyPoke-Down {
-  height: 175px;
-  width: 350px;
-  /* border: 5px solid rgb(239, 21, 21); */
+  height: 11.5vh;
+  width: 24.5vw;
+  border: 5px solid black; 
 }
