[Modify] join.jsp 충돌해결 안되서 join2.jps 복사해두고 작업중

--- a/src/main/webapp/css/join.css
+++ b/src/main/webapp/css/join.css
@@ -17,6 +17,9 @@
 .signup-input-img {
     height: 1rem;
 }
+.signup-input-btn{
+    background-color: lightgray;
+}
 .signup-btn{
     background-color: gray;
     text-align: center;
