myRewards.jsp 수정

--- a/src/main/webapp/css/myRewards.css
+++ b/src/main/webapp/css/myRewards.css
@@ -1,29 +1,109 @@
 @charset "UTF-8";
 
 #r-pokemons{
-/* Frame 136 */
+	height: 150px;
+	width: 110px;
+	left: 0px;
+	top: 0px;
+	border-radius: 20px;
+	padding: 11px 5px 11px 5px;
+	border: 1px solid #787878;
+	background: linear-gradient(0deg, #FFFFFF, #FFFFFF);
+	position: relative;
+}
 
-box-sizing: border-box;
+#r-pokemon{
+	/* Group 135 */
+width: 100px;
+height: 128px;
 
-/* Auto layout */
-
-display: flex;
-flex-direction: row;
-align-items: flex-start;
-padding: 11px 5px;
-gap: 10px;
-
-width: 110px;
-height: 150px;
-
-background: #FFFFFF;
-border: 1px solid #787878;
-border-radius: 20px;
 
 /* Inside auto layout */
 
 flex: none;
 order: 0;
 flex-grow: 0;
+}
+
+#r-pokemon-no {
+	/* Rectangle 49 */
+	position: absolute;
+	width: 36px;
+	height: 15px;
+	margin-left: calc(50% - 40px/2 - 35px);
+	top: calc(50% - 13px/2 - 56.5px);
 	
+	background: #000000;
+	border-radius: 10px;
+}
+
+.no {
+	width: 25px;
+	height: 12px;
+	left: 16px;
+	top: 13px;
+	margin-left: 5px;
+	font-family: 'Inter';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 10px;
+	line-height: 12px;
+	
+	color: #FFFFFF;	
+}
+
+#r-pokemon-name {
+	/* Rectangle 49 */
+	
+	width: 91px;
+	height: 15px;
+	left: calc(50% - 91px/2 + 0.5px);
+	top: calc(50% - 15px/2 - 56.5px);
+	margin-left: 4px;
+	background: rgba(0, 0, 0, 0.5);
+	border-radius: 10px;
+}
+
+.name{
+	height: 14px;
+	width: 50px;
+	margin-left: 36px;
+	top: 12px;
+	border-radius: nullpx;
+	font-family: 'Open Sans';
+	font-style: normal;
+	font-weight: 800;
+	font-size: 10px;
+	line-height: 14px;
+	/* identical to box height */
+	
+	text-align: center;
+	
+	color: #FFFFFF;
+}
+.r-pokemon-ball{
+	width: 10px;
+	height: 10px;
+	margin-left: 14px;
+	margin-top: -7px;
+}
+
+.r-pokemon-bottom{
+	width: 49px;
+	height: 14px;
+	left: 37px;
+	top: 125px;
+
+	font-family: 'Open Sans';
+	font-style: normal;
+	font-weight: 800;
+	font-size: 10px;
+	line-height: 14px;
+	margin-top: -8px;
+	margin-left: 29px;
+	/* identical to box height */
+	
+	text-align: center;
+	
+	color: #000000;
 }
