[Add] .gitignore 목록 업데이트 / [Design] Main 페이지 다크모드 배경색 변경 (스크롤 색상, 아이콘 색상 변경 진행 중)

--- a/src/main/webapp/css/pokemonMain.css
+++ b/src/main/webapp/css/pokemonMain.css
@@ -52,19 +52,28 @@
   border-radius: 1.5vw;
   background-color: transparent;
   padding-left: 2vw;
+  color: white;
+  font-weight: bold;
+  font-size: 0.8vw;
+}
+
+#search-input:focus {
+  outline: none;
+  border: 1px solid #ffc800;
+  box-shadow: 0 0 5px 2px #ffc800;
 }
 
 #search-input::placeholder {
   text-overflow: ellipsis;
   font-style: normal;
   font-weight: 400;
-  font-size: 1vw;
+  font-size: 0.8vw;
   color: rgba(255, 255, 255, 0.5);
 }
 
 #magnifier-icon {
   position: absolute;
-  width: 2vw;
+  width: 1vw;
   right: 1.5vw;
 }
 
