--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -11,14 +11,20 @@ body {
   color: white;
 }
 
+/* Dark mode styles */
+.dark-mode {
+  background-color: black;
+  color: white;
+}
+
 article {
-  border: 1px solid blue;
+  /*   border: 1px solid blue; */
   width: 100%;
   height: 100vh;
 }
 
 .pokemon-main {
-  border: 1px solid red;
+  /*   border: 1px solid red; */
   width: 80%;
   height: 100vh;
 }
@@ -107,5 +113,5 @@ article {
   height: 9.375em;
   font-size: 1.5em;
   font-weight: 600;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.1);
 }
