--- a/src/main/webapp/css/myRewards.css
+++ b/src/main/webapp/css/myRewards.css
@@ -1,10 +1,26 @@
 @charset "UTF-8";
+#r-account{
+	display: flex;
+	text-align: center;
+	color: black;
+}
 
+#r-account-img{ 
+	width: 153px;
+	height: 168.68px;
+	left: 823px;
+	top: 358px;
+	background: #D9D9D9;
+	border-radius: 100.5px;
+	text-align: center;
+}
 #r-pokemons{
 	height: 150px;
 	width: 110px;
 	left: 0px;
 	top: 0px;
+	margin-top: 100px;
+	margin-left: 200px;
 	border-radius: 20px;
 	padding: 11px 5px 11px 5px;
 	border: 1px solid #787878;
@@ -30,19 +46,19 @@ flex-grow: 0;
 	position: absolute;
 	width: 36px;
 	height: 15px;
-	margin-left: calc(50% - 40px/2 - 35px);
+	margin-left: calc(50% - 32px/2 - 34px);
 	top: calc(50% - 13px/2 - 56.5px);
 	
 	background: #000000;
 	border-radius: 10px;
 }
 
-.no {
+.r-no {
 	width: 25px;
 	height: 12px;
 	left: 16px;
 	top: 13px;
-	margin-left: 5px;
+	margin-left: 11px;
 	font-family: 'Inter';
 	font-style: normal;
 	font-weight: 400;
@@ -64,7 +80,7 @@ flex-grow: 0;
 	border-radius: 10px;
 }
 
-.name{
+.r-name{
 	height: 14px;
 	width: 50px;
 	margin-left: 36px;
@@ -81,14 +97,20 @@ flex-grow: 0;
 	
 	color: #FFFFFF;
 }
+#r-pokemon-bottom{
+	display: flex;
+	height: 14px;
+	width: 98px;
+}
 .r-pokemon-ball{
 	width: 10px;
 	height: 10px;
 	margin-left: 14px;
-	margin-top: -7px;
+	justify-content: center;
+	margin-top: -5px;
 }
 
-.r-pokemon-bottom{
+.r-pokemon-maker{
 	width: 49px;
 	height: 14px;
 	left: 37px;
@@ -99,10 +121,8 @@ flex-grow: 0;
 	font-weight: 800;
 	font-size: 10px;
 	line-height: 14px;
-	margin-top: -8px;
-	margin-left: 29px;
+	margin-left: 5px;
 	/* identical to box height */
-	
 	text-align: center;
 	
 	color: #000000;
