--- a/src/main/webapp/css/myRewards.css
+++ b/src/main/webapp/css/myRewards.css
@@ -1,4 +1,17 @@
 @charset "UTF-8";
+#r-accounts{
+	display: flex;
+	color: black;
+}
+
+#r-account-img{
+	width: 153px;
+	height: 168.68px;
+	left: 823px;
+	top: 358px;
+	background: #D9D9D9;
+	border-radius: 100.5px;
+}
 
 #r-pokemons{
 	height: 150px;
@@ -10,6 +23,8 @@
 	border: 1px solid #787878;
 	background: linear-gradient(0deg, #FFFFFF, #FFFFFF);
 	position: relative;
+	margin-top: 100px;
+	margin-left: 200px;
 }
 
 #r-pokemon{
@@ -30,19 +45,19 @@ flex-grow: 0;
 	position: absolute;
 	width: 36px;
 	height: 15px;
-	margin-left: calc(50% - 40px/2 - 35px);
+	margin-left: calc(50% - 32px/2 - 34px);
 	top: calc(50% - 13px/2 - 56.5px);
 	
 	background: #000000;
 	border-radius: 10px;
 }
 
-.no {
+.r-no {
 	width: 25px;
 	height: 12px;
 	left: 16px;
 	top: 13px;
-	margin-left: 5px;
+	margin-left: 11px;
 	font-family: 'Inter';
 	font-style: normal;
 	font-weight: 400;
@@ -59,12 +74,12 @@ flex-grow: 0;
 	height: 15px;
 	left: calc(50% - 91px/2 + 0.5px);
 	top: calc(50% - 15px/2 - 56.5px);
-	margin-left: 4px;
+	margin-left: 5px;
 	background: rgba(0, 0, 0, 0.5);
 	border-radius: 10px;
 }
 
-.name{
+.r-name{
 	height: 14px;
 	width: 50px;
 	margin-left: 36px;
@@ -75,20 +90,24 @@ flex-grow: 0;
 	font-weight: 800;
 	font-size: 10px;
 	line-height: 14px;
-	/* identical to box height */
-	
 	text-align: center;
-	
 	color: #FFFFFF;
 }
+
+#r-pokemon-bottom{
+	display: flex;
+	height: 14px;
+	width: 98px;
+}
+
 .r-pokemon-ball{
 	width: 10px;
 	height: 10px;
 	margin-left: 14px;
-	margin-top: -7px;
+	margin-top: -5px;
 }
 
-.r-pokemon-bottom{
+.r-pokemon-maker{
 	width: 49px;
 	height: 14px;
 	left: 37px;
@@ -100,8 +119,7 @@ flex-grow: 0;
 	font-size: 10px;
 	line-height: 14px;
 	margin-top: -8px;
-	margin-left: 29px;
-	/* identical to box height */
+	margin-left: 5px;
 	
 	text-align: center;
 	
