--- a/src/main/webapp/css/myRewards.css
+++ b/src/main/webapp/css/myRewards.css
@@ -12,7 +12,8 @@
 	top: 358px;
 	background: #D9D9D9;
 	border-radius: 100.5px;
-	text-align: center;
+	margin-top: 50px;
+	margin-left: 50px;
 }
 #r-pokemons{
 	height: 150px;
@@ -20,7 +21,7 @@
 	left: 0px;
 	top: 0px;
 	margin-top: 100px;
-	margin-left: 200px;
+	margin-left: 70px;
 	border-radius: 20px;
 	padding: 11px 5px 11px 5px;
 	border: 1px solid #787878;
