--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -17,6 +17,65 @@ body {
   color: white;
 }
 
+#toggle-area {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+#toggle-label {
+  position: relative;
+  display: block;
+  width: 6em;
+  height: 3em;
+  border-radius: 100px;
+  background-color: #000839;
+  overflow: hidden;
+  cursor: pointer;
+  &:before,
+  &:after {
+    display: block;
+    position: absolute;
+    content: "";
+    width: 1em;
+    height: 1em;
+    border-radius: 50%;
+    top: 14px;
+    left: 14px;
+    transition: 0.5s ease;
+  }
+  &:before {
+    background-color: #ffa41b;
+  }
+
+  &:after {
+    background-color: #000839;
+    left: -58px;
+    transform: scale(0.00001);
+  }
+}
+
+input[type="checkbox"] {
+  display: none;
+  &:checked + label {
+    &:before {
+      background-color: #fff;
+      transform: translateX(80px);
+    }
+
+    &:after {
+      transform: translateX(120px) scale(1);
+    }
+  }
+}
+
+/* 토글 css 끝 */
+
 article {
   /*   border: 1px solid blue; */
   width: 100%;
