--- a/src/main/webapp/css/quiz.css
+++ b/src/main/webapp/css/quiz.css
@@ -6,7 +6,7 @@
   font-style: normal;
 }
 .quiz-Container {
-  height: 71vh;
+  height: 70vh;
   width: 74.7vw;
   top: 290.9999694824219px;
   border-radius: 50px;
@@ -75,12 +75,13 @@
 }
 button {
   font-family: "DungGeunMo";
-  font-size: 2.5em;
+  font-size : 2.3rem;
   border: none;
   background-color: transparent;
+  cursor: pointer;
 }
 button:hover {
-	font-size:2.8em;
+  font-size : 2.5em;
 }
 .btn-Four-In {
   height: 21vh;
@@ -136,37 +137,52 @@ button:hover {
   height: 10.5vh;
   width: 12vw;
   /* border: 3px solid skyblue; */
-    display: flex;
+   display: flex;
   align-items: center;
   justify-content: center;
 }
 .myPoke {
-  height: 46.5px;
+  height: 46.5vh;
   width: 24vw;
   /* border: 4px solid purple; */
 }
+
 .myPoke-Up {
-  height: 46.5vh;
+  height: 11.5vh;
   width: 22vw;
-   border: 3px solid skyblue;
+/*   border: 3px solid skyblue;  */
 }
 .myPoke-Down {
-  height: 23vh;
-  width: 21.5vw;
-  /* border: 3px solid black; */
+  height: 35vh;
+  width: 22vw;
+  position: relative;
+/*   border: 3px solid black;  */
+}
+#trainerImg{
+	margin-top: 70px;
+	margin-left: 30px;
+	width: 72%;
+	position: absolute;
+	bottom: 0;
 }
 .enemyPoke {
   height: 46.5vh;
   width: 27vw;
-  border: 3px solid red; 
 }
 .enemyPoke-Up {
   height: 35vh;
   width: 24.5vw;
-   border: 3px solid pink;
+  position: relative;
 }
 .enemyPoke-Down {
   height: 11.5vh;
   width: 24.5vw;
-  border: 5px solid black; 
+/*   border: 5px solid black;  */
+}
+#imgshaddow{
+	width: 65%;
+	filter: brightness(0%);
+	position: absolute;
+	top: 0;
+	right: 10px;
 }
