--- a/src/main/webapp/css/quiz.css
+++ b/src/main/webapp/css/quiz.css
@@ -31,7 +31,7 @@
   width: 47vw;
   /* border: 3px solid rgb(120, 120, 38); */
   display: flex;
-  border: 2px solid black;
+/*   border: 2px solid black; */
   border-bottom: none;
 }
 
@@ -144,18 +144,26 @@ button:hover {
 .myPoke {
   height: 46.5vh;
   width: 24vw;
-  /* border: 4px solid purple; */
+/*   border: 4px solid purple;  */
 }
-
+.enemyPokeName{
+	width: 24vw;
+/* 	border: 3px solid black; */
+}
 .myPoke-Up {
   height: 11.5vh;
-  width: 22vw;
-/*   border: 3px solid skyblue;  */
+  width: 24vw;
+/*   border: 3px solid pink;  */
+}
+#enemyPokeHp{
+width: 22vw;
+/*  border: 3px solid purple; */  
 }
 .myPoke-Down {
   height: 35vh;
   width: 22vw;
   position: relative;
+/*   	border: 3px solid red; */
 /*   border: 3px solid black;  */
 }
 #trainerImg{
@@ -170,14 +178,21 @@ button:hover {
   width: 27vw;
 }
 .enemyPoke-Up {
-  height: 35vh;
+  height: 30vh;
   width: 24.5vw;
   position: relative;
 }
 .enemyPoke-Down {
-  height: 11.5vh;
+  height: 16.5vh;
   width: 24.5vw;
-/*   border: 5px solid black;  */
+  position: relative;
+/*   border: 5px solid black; */
+}
+#myPokeHp{
+	width: 24.5vw;
+	position: absolute;
+	bottom: 0;
+	right: 0;
 }
 #imgshaddow{
 	width: 65%;
