--- a/src/main/webapp/css/quiz.css
+++ b/src/main/webapp/css/quiz.css
@@ -147,20 +147,26 @@ button:hover {
 /*   border: 4px solid purple;  */
 }
 .enemyPokeName{
-	width: 24vw;
-/* 	border: 3px solid black; */
+	height: 5vh;
+	width: 22vw;
+/* 	border: 3px solid black;  */
+	color: black;
+	text-align: center;
+	font-size: 40pt;
+	letter-spacing: 30px;
+	font-family: "DungGeunMo";
 }
 .myPoke-Up {
   height: 11.5vh;
   width: 24vw;
-/*   border: 3px solid pink;  */
+/*   border: 3px solid pink;   */
 }
 #enemyPokeHp{
 width: 22vw;
 /*  border: 3px solid purple; */  
 }
 .myPoke-Down {
-  height: 35vh;
+  height: 30vh;
   width: 22vw;
   position: relative;
 /*   	border: 3px solid red; */
