[Design] 헤더 영역 drop 메뉴 icon 추가

--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -98,6 +98,10 @@ article {
   color: white;
 }
 
+.drop-icon-img {
+  width: 1em;
+}
+
 /* Main Area */
 #contents-area /* Include Area */ {
   background-color: rgb(172, 215, 215, 0.8);
