--- a/src/main/webapp/css/mypageEdit.css
+++ b/src/main/webapp/css/mypageEdit.css
@@ -1,1 +1,42 @@
 @charset "UTF-8";
+
+.btn-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10vh;
+}
+.btn-container > div{
+    position: relative;
+}
+.info-input-btn{
+    width: 25vw;
+    height: 40px;
+    background-color: lightgray;
+    border-radius: 1.5vw;
+    border: transparent;
+    margin-bottom: 10px;
+    padding-left: 6vw;
+}
+.user-icon {
+    position: absolute;
+    width: 20px;
+    left: 2vw;
+    margin-top: 10px;
+}
+.confirm-btn{
+    width: 25vw;
+    height: 40px;
+    line-height: 40px;
+    background-color: gray;
+    text-align: center;
+    border-radius: 1.5vw;
+    border: transparent;
+}
+.google-logo{
+    width: 25px;
+}
+.or-signup{
+    color: black;
+}
