--- a/src/main/webapp/css/signup.css
+++ b/src/main/webapp/css/signup.css
@@ -33,6 +33,7 @@
     text-align: center;
     border-radius: 1.5vw;
     border: transparent;
+    color: white;
 }
 .google-logo{
     width: 25px;
