--- a/src/main/webapp/css/mypageEdit.css
+++ b/src/main/webapp/css/mypageEdit.css
@@ -7,6 +7,7 @@
 }
 
 .profile-container{
+    position: relative;
     background-color: lightgray;
     height: 210px;
     width: 200px;
@@ -18,6 +19,12 @@
     width: 100px;
     top: 50px;
     left: 50px;
+}
+.profile-gear-icon{
+    position: absolute;
+    width: 30px;
+    top: 180px;
+    left: 150px;
 }
 
 .btn-container{
