--- a/src/main/webapp/css/pokemonMain.css
+++ b/src/main/webapp/css/pokemonMain.css
@@ -112,8 +112,7 @@
 
   height: 185px;
   background: rgba(255, 255, 255, 0.6);
-  border-width: 2px;
-  border-style: solid;
+
   border-radius: 15px;
 
   /* text css */
@@ -123,8 +122,6 @@
   text-align: center;
   color: rgba(46, 46, 46, 0.8);
 }
-
-
 
 .card-white-bg {
   position: absolute;
@@ -147,12 +144,12 @@
 }
 
 .card-contents p {
-  line-height: 30px;
+  line-height: 25px;
 }
 
 .card-pokemon-img {
-  width: 60px;
-  margin-bottom: 20px;
+  width: 100px;
+  z-index: 5;
 }
 
 .card-type-icon {
