--- a/src/main/webapp/css/pokemonMain.css
+++ b/src/main/webapp/css/pokemonMain.css
@@ -36,45 +36,51 @@
 /* search bar design */
 
 .search-bar-area {
-  display: flex;
   align-items: center;
   width: 30vw;
+  height: 5vh;
   position: relative;
   margin-top: 3vh;
   margin-bottom: 2vh;
 }
 
 #search-input {
-  width: 50vw;
-  height: 50px;
+  position: relative;
+  width: 100%;
+  height: 100%;
   border: 0.2vw solid #ffffff;
   filter: drop-shadow(0vw 0.4vw 0.4vw rgba(0, 0, 0, 0.25));
   border-radius: 1.5vw;
   background-color: transparent;
-  padding-left: 2vw;
+  padding-left: 5%;
   color: white;
   font-weight: bold;
   font-size: 0.8vw;
+/*   overflow: auto; */
 }
 
 #search-input:focus {
   outline: none;
   border: 1px solid #ffc800;
-  box-shadow: 0 0 5px 2px #ffc800;
+  box-shadow: 0 0 10px 2px #ffc800;
 }
 
 #search-input::placeholder {
-  text-overflow: ellipsis;
+  text-overflow: auto;
   font-style: normal;
   font-weight: 400;
-  font-size: 0.8vw;
+  font-size: 100%;
   color: rgba(255, 255, 255, 0.5);
 }
 
+
 #magnifier-icon {
   position: absolute;
-  width: 1vw;
-  right: 1.5vw;
+  width: 4%;
+  right: 5%;
+  bottom: 25%;
+  margin:0;
+  z-index: 999;
 }
 
 /* pokemon cards gallery */
@@ -102,7 +108,7 @@
 }
 
 .pokemon-card {
-  box-sizing: border-box;
+/*   box-sizing: border-box; */
   overflow: hidden;
   position: relative;
   margin-top: 5vh;
@@ -112,8 +118,8 @@
 
   height: 185px;
   background: rgba(255, 255, 255, 0.6);
+/*   border-radius: 15px; */
 
-  border-radius: 15px;
 
   /* text css */
   font-style: normal;
@@ -148,7 +154,7 @@
 }
 
 .card-pokemon-img {
-  width: 100px;
+  width: 95px;
   z-index: 5;
 }
 
