--- a/src/main/webapp/css/pokemonMain.css
+++ b/src/main/webapp/css/pokemonMain.css
@@ -56,7 +56,11 @@
   color: white;
   font-weight: bold;
   font-size: 0.8vw;
-/*   overflow: auto; */
+  background-image: url("../img/icon/magnifier-icon.png");
+  background-position: 95%;
+  background-repeat: no-repeat;
+  background-size: 1.5vw;
+  overflow: auto;
 }
 
 #search-input:focus {
@@ -113,12 +117,13 @@
   position: relative;
   margin-top: 5vh;
   width: 150px;
-  margin-right: 70px;
+  margin-left: 35px;
+  margin-right: 35px;
   margin-bottom: 10px;
 
   height: 185px;
   background: rgba(255, 255, 255, 0.6);
-/*   border-radius: 15px; */
+  border-radius: 15px;
 
 
   /* text css */
@@ -134,8 +139,9 @@
   width: 100%;
   height: 60%;
   background-color: rgba(255, 255, 255, 0.7);
-  border-radius: 0 0 15px 15px;
+  border-radius: 0 0 10px 10px;
   bottom: 0;
+  z-index: 9999;
 }
 
 .card-contents {
