--- a/src/main/webapp/css/pokemonMain.css
+++ b/src/main/webapp/css/pokemonMain.css
@@ -13,8 +13,8 @@
 /* for responsive design */
 
 .type-icons-wrapper {
-  display: flex;
-  flex-wrap: wrap;
+   display: flex; 
+   flex-wrap: wrap; 
 }
 
 .type-icons button {
@@ -37,8 +37,8 @@
 
 .search-bar-area {
   align-items: center;
-  width: 30vw;
-  height: 5vh;
+  width: 350px;
+  height: 40px;
   position: relative;
   margin-top: 3vh;
   margin-bottom: 2vh;
@@ -48,9 +48,9 @@
   position: relative;
   width: 100%;
   height: 100%;
-  border: 0.2vw solid #ffffff;
+  border: 2px solid #ffffff;
   filter: drop-shadow(0vw 0.4vw 0.4vw rgba(0, 0, 0, 0.25));
-  border-radius: 1.5vw;
+  border-radius: 15px;
   background-color: transparent;
   padding-left: 5%;
   color: white;
@@ -59,7 +59,7 @@
   background-image: url("../img/icon/magnifier-icon.png");
   background-position: 95%;
   background-repeat: no-repeat;
-  background-size: 1.5vw;
+  background-size: 15px;
   overflow: auto;
 }
 
@@ -77,15 +77,6 @@
   color: rgba(255, 255, 255, 0.5);
 }
 
-
-#magnifier-icon {
-  position: absolute;
-  width: 4%;
-  right: 5%;
-  bottom: 25%;
-  margin:0;
-  z-index: 999;
-}
 
 /* pokemon cards gallery */
 
