--- a/src/main/webapp/css/myRewards.css
+++ b/src/main/webapp/css/myRewards.css
@@ -18,7 +18,8 @@
 	background: #D9D9D9;
 	border-radius: 100.5px;
 	margin-top: 50px;
-	margin-left: 145px;
+	margin-left: 60px;
+	margin-right: 20px;
 }
 
 #r-account-img{
@@ -47,6 +48,10 @@
 	margin-left: -140px;
 }
 .r-account:nth-child(5){
+	margin-top: 140px;
+	color: #C54431;
+}
+.r-account:nth-child(6){
 	margin-top: 140px;
 }
 
@@ -82,7 +87,8 @@
 	left: 0px;
 	top: 0px;
 	margin-top: 20px;
-	margin-left: 76px;
+	margin-left: 25px;
+	margin-right: 25px;
 	border-radius: 20px;
 	padding: 11px 5px 11px 5px;
 	border: 1px solid #787878;
