--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -141,17 +141,23 @@ article {
 		align-items: center;
 		position: relative;
 	}
+	.drop-menu-wrapper {
+		display: flex;
+		position: relative;
+		width: 100%;
+	}
 	.drop-menu {
 		display: none;
 		flex-direction: column;
 		align-items: center;
 		position: absolute;
-		top: 55%;
-		right: -35px;
+		top: 62%;
+		right: -18.5px;
 		background-color: rgba(0, 0, 0, 0.7);
 		transition: max-height 0.8s ease;
-		max-height: 0;
+		max-height: 0px;
 		overflow: hidden;
+		font-size: 0.8em;
 	}
 	.drop-menu li {
 		text-align: center;
@@ -162,11 +168,12 @@ article {
 	.drop-icon-img {
 		display: flex;
 		position: absolute;
-		top:43%;
-		right: -5%;
+		top: 25%;
+		right: -20px;
 	}
 	.drop-menu.active {
 		display: flex;
 		max-height: 500px;
+		
 	}
 }
