[Feat] 포켓몬 디테일 페이지 작업

--- a/src/main/webapp/css/pokemonDetail.css
+++ b/src/main/webapp/css/pokemonDetail.css
@@ -1,32 +1,68 @@
 @charset "UTF-8";
 body {
-	background:linear-gradient(to bottom , #66A945, #735198 );
+
 	height:100vh;
+	position:relative;
 }
-#header{
-	background-color:rgb(255,255,255,0.1);
-	height:15%;
-	
-	
+#detailimg{
+	border-radius:50%;
+	border:solid white 3px;
+	height:27vh;
+	width:27vh;
+	position:absolute;
+	left:55%;
+	top:12%;
+	background-color:rgb(255,255,255, 0.5);
+}
+#pokeimg{
+	position:absolute;
+	width: 26vh;
+	left:55.5%;
+	top:13.3%;
+	z-index:1;
 	
 }
-#title{
-	color: white;
+#content1{
+	margin-top:5%;
+	display:flex;
+	margin-bottom:1%;
+	margin-left:10%;
+	
+}
+#p_numName{
+	color:gray;
+	font-size:20pt;
+	font-weight:bold;
+}
+#p_typeImgs{
+	display:flex;
+	align-items:flex-end;
+}
+.type_img{
+	width:4vh;
+	height:4vh;
+	margin-left:0.5vw;
+	
 }
 #mainpage{
 	border-radius: 50px;
 	border: 3px solid white;
 	background-color:rgb(255,255,255, 0.8);
-	width: 28%;
-	height: 50%;
-	padding-left:6%;
-	padding-right:6%;
+	width: 50vw;
+	height: 50vh;
+	position:absolute;
+	left:50%;
+	top:50%;
+	transform: translate(-50%,-45%);
+	
 }
 #content2{
 	
 	justify-content:space-between;
 	display:flex;
-	
+	height:4vh;
+	padding-left:10%;
+	padding-right:10%;
 	
 }
 .p_info_column{
@@ -34,27 +70,25 @@ body {
 	border-radius:7px;
 	border-style: none;
 	width:25%;
-	height:26px;
 	color:gray;
 	font-weight:bold;
 	font-size:11pt;
 	text-align:center;
-	padding-top:4px;
-	
+	padding-top:1.1%;
 }
 #content3{
 	justify-content:space-between;
 	display:flex;
-	padding-top:0.5%;
-	padding-bottom:0.5%;
-	margin-bottom:25px;
+	margin-bottom:2vh;
+	margin-top:2vh;
+	height:2vh;
+	padding-left:10%;
+	padding-right:10%;
 	
 }
 .p_info_column2{
 	width:25%;
 	text-align:center;
-	padding-top:4px;
-	padding-bottom:-2px;
 	font-size:11pt;
 	font-weight:800;
 	color:gray;
@@ -63,15 +97,17 @@ body {
 	background-color:rgba(0,0,0,0.15);
 	border-radius : 8px;
 	box-shadow: 4px 4px 5px rgba(0,0,0,0.3);
-	margin-bottom:30px;
+	margin-bottom:10vh;
+	height:10%;
+	width:80%;
+	margin:0 auto;
+	margin-bottom:5vh;
 }
 .p_des{
 	color:black;
-	
-	
 	font-size:11pt;
-	padding-left:5pt;
-	padding-right:5pt;
+	padding-left:0.5vw;
+	padding-right:0.5vw;
 	padding-top:3pt;
 	padding-bottom:3pt;
 	word-break:break-all;
@@ -81,18 +117,12 @@ body {
 	background-color:rgba(0,0,0,0.1);
 	border-radius : 10px;
 	box-shadow: 4px 4px 5px rgba(0,0,0,0.3);
-	position:relative;
-	width:100%;
-	height:14%;
+	height:10vh;
+	width:80%;
+	display:flex;
+	margin:0 auto;
+	justify-content:space-around;
 }
 .p_img {
-	width:120px;
-}
-#content5-2{
-	padding-left:30px;
-	padding-right:30px;
-	display:flex;
-	justify-content:space-between;
-	position:absolute;
-	top:290px;
+	width:5vw;
 }
