[Refactor] HC.java, TypeViewC.java, TranslationDAO.java DBDAO.java  랭귀지세션을 넘겨서 세션에 따라 sql문이 각 언어에 맞게 바뀌도록 수정 [Feat] myRewards.jsp 로그인 안했거나 로그인 했어도 획득 띠부씰이 없을 시 더미 데이터가 보이도록 수정

--- a/src/main/webapp/css/myRewards.css
+++ b/src/main/webapp/css/myRewards.css
@@ -44,15 +44,15 @@
 }
 
 .r-account:nth-child(4){
-	margin-top: 140px;
-	margin-left: -140px;
+	margin-top: 110px;
 }
 .r-account:nth-child(5){
-	margin-top: 140px;
+	margin-left: 10px;
+	margin-top: 110px;
 	color: #C54431;
 }
 .r-account:nth-child(6){
-	margin-top: 140px;
+	margin-top: 110px;
 }
 
 /* 스크롤 */
@@ -149,6 +149,9 @@
 	line-height: 14px;
 	text-align: center;
 	color: #FFFFFF;
+}
+.r-pokemon-img{
+	width: 100px;
 }
 #r-pokemon-bottom{
 	display: flex;
