--- a/src/main/webapp/css/pokemonDetail.css
+++ b/src/main/webapp/css/pokemonDetail.css
@@ -60,7 +60,7 @@ body {
 	position:absolute;
 	left:50%;
 	top:50%;
-	transform: translate(-50%,-60%);
+	transform: translate(-50%,-55%);
 	
 }
 
@@ -124,6 +124,9 @@ body {
 	word-break:break-all;
 	line-height:150%;
 	font-weight:bold;
+	height: 100%;
+    display: flex;
+    align-items: center;
 }
 
 /* 이미지 div */
