[add] 획득하셨습니다. [Fix] game.js DDIbu

--- a/src/main/webapp/css/gameHome.css
+++ b/src/main/webapp/css/gameHome.css
@@ -8,10 +8,12 @@
 }
 .mainDescription {
   font-family: "DungGeunMo";
-  font-size: 20pt;
+  font-size: 1vw;
   text-align: center;
-  line-height: 30px;
+  line-height: 1vw;
+  line-height: 3vh;
   color: black;
+  overflow : hidden;
 }
 #followButton {
   font-family: "DungGeunMo";
@@ -19,7 +21,8 @@
   background-color: transparent;
   font-size: 20pt;
   color: purple;
-  
+  line-height: 1vw;
+  line-height: 3vh;
 }
 #followButton:hover {
   font-size: 25pt;
