[Refactoring, Design] 반응형 디자인 작업 외
Account page 반응형 작업

user-icon : vh로 변경 (폰으로 볼때 위치 일정하게)

mypageEdit.jsp 전체적으로 반응형으로 변경

게임기 poke-title-arae에 1024 아래일 경우 media query 적용 -> margin left 제거 (PC 화면에서 가로 비율 조정시 좀더 유지 가능)

poke-stop-icon 새로 위치 반응형으로 조정(폰으로도 볼 수 있게)

전부 확인 버튼 pointer:cursor 적용

input.jsp 제거

pokemonMain.jsp 에서 a태그 위치 카드 안으로 움김 (커서 포인터 추가 필요)

gameHome.jsp, gameHome.css 텍스트 크기, 여백 수정

--- a/src/main/webapp/css/login.css
+++ b/src/main/webapp/css/login.css
@@ -3,17 +3,17 @@
 #pokedex-white-bg{
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 .btn-container{
     align-items: center;
     justify-content: center;
-    margin-top: 20vh;
 }
 .btn-container > div{
     position: relative;
 }
 .info-input-btn{
-    width: 25vw;
+	width: 25vw;
     height: 40px;
     background-color: lightgray;
     border-radius: 1.5vw;
@@ -25,8 +25,9 @@
     position: absolute;
     width: 20px;
     left: 2vw;
-    margin-top: 10px;
+    margin-top: 1vh;
 }
+
 .confirm-btn-container{
     display: flex;
     justify-content: space-between;
@@ -40,7 +41,9 @@
     border-radius: 1.5vw;
     border: transparent;
     color: white;
+    cursor: pointer;
 }
+
 .google-logo-container{
     display: flex;
     justify-content: center;
@@ -49,6 +52,7 @@
     width: 25px;
 }
 .or-signup{
+	width: 25vw;
     color: black;
     text-align: center;
 }
