--- a/src/main/webapp/css/mypageEdit.css
+++ b/src/main/webapp/css/mypageEdit.css
@@ -12,19 +12,19 @@
     height: 210px;
     width: 200px;
     border-radius: 45%;
-    margin-right: 50px;
+    margin-right: 2vw;
 }
 .profile-icon{
-    position: relative;
-    width: 100px;
-    top: 50px;
-    left: 50px;
+    position: absolute;
+    width: 70%;
+    top: 15%;
+    left: 15%;
 }
 .profile-gear-icon{
     position: absolute;
     width: 30px;
-    top: 180px;
-    left: 150px;
+    bottom: 0;
+    right: 10%;
 }
 
 .btn-container{
@@ -38,8 +38,11 @@
     position: relative;
 }
 .info-input-btn{
+	color: black;
+	font-size: 10pt;
     width: 25vw;
     height: 40px;
+    line-height: 40px;
     background-color: lightgray;
     border-radius: 1.5vw;
     border: transparent;
@@ -50,10 +53,10 @@
     position: absolute;
     width: 20px;
     left: 2vw;
-    margin-top: 10px;
+    margin-top: 1vh;
 }
 .confirm-btn{
-    width: 31vw;
+    width: 25vw;
     height: 40px;
     line-height: 40px;
     background-color: gray;
@@ -61,4 +64,5 @@
     border-radius: 1.5vw;
     border: transparent;
     color: white;
+    cursor: pointer;
 }
