[Design] 반응형 작업 마무리
 poke-spot 아이콘 핸드폰 사이즈에서도 위치 맞게 media-query 적용

--- a/src/main/webapp/css/pokedexFrameAccount.css
+++ b/src/main/webapp/css/pokedexFrameAccount.css
@@ -93,9 +93,15 @@
   color: black;
 }
 
+/* Media Query for Responsive Website */
+@media screen and (max-width : 1024px) {
+	.pokedex-title-txt {
+		margin-top: 20vh;
+	}
+
 #poke-spot-icon {
   width: 10vw;
-  margin-top: 70%;
+  margin-top: 50%;
 }
 
 #pokedex-white-bg {
