--- a/src/main/webapp/css/pokemonMain.css
+++ b/src/main/webapp/css/pokemonMain.css
@@ -42,12 +42,18 @@
   position: relative;
   margin-top: 3vh;
   margin-bottom: 2vh;
+  
+}
+
+#search-button-flex{
+	display:flex;
+	align-items:center;
 }
 
 #search-input {
   position: relative;
   width: 100%;
-  height: 100%;
+  height: 30px;
   border: 2px solid #ffffff;
   filter: drop-shadow(0vw 0.4vw 0.4vw rgba(0, 0, 0, 0.25));
   border-radius: 15px;
@@ -56,10 +62,10 @@
   color: white;
   font-weight: bold;
   font-size: 0.8vw;
-  background-image: url("../img/icon/magnifier-icon.png");
+  /* background-image: url("../img/icon/magnifier-icon.png");
   background-position: 95%;
   background-repeat: no-repeat;
-  background-size: 15px;
+  background-size: 15px; */
   overflow: auto;
 }
 
@@ -77,6 +83,22 @@
   color: rgba(255, 255, 255, 0.5);
 }
 
+#search-button{
+	width: 15px;
+	height: 15px;
+	background-image: url(../img/icon/magnifier-icon.png);
+	background-size: 100%;
+	background-color: transparent;
+	background-repeat: no-repeat;
+	background-position: center;
+	border:none;
+	position:absolute;
+	right:10px;
+}
+
+#search-button:active {
+  transform: translateY(0.1vw);
+}
 
 /* pokemon cards gallery */
 
